--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Zhizhen Chen's Homepage"
 title_separator          : "-"
 name                     : &name "Zhizhen Chen"
 description              : &description "personal description"
-url                      : https://jiaangk.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://zhizhen-chen.top/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jiaangk/jiaangk.github.io"
 
